# perf_analyzer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  TEMPORARY_EXAMPLE_input_data.json  input_data.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codeql-updated.yml  codeql.yaml  codeql.yml  external-pr.yml  mirror_repo.sh  pre-commit.yaml  pre-commit.yml  python-package-genai.yaml  python-package-genai.yml  trigger_ci.yml
docs/: benchmarking.md  cli.md  inference_load_modes.md  input_data.md  install.md  measurements_metrics.md
genai-perf/: LICENSE  README.md  analyze_export_genai_perf.csv  brian.yaml  checkpoint.json  inputs.json  llm_inputs.json  pyproject.toml  pytest.ini
genai-perf/docs/: analyze.md  compare.md  customizable_frontends.md  customizable_payloads.md  dynamo.md  embeddings.md  example_plots.md  files.md  goodput.md  goodput_tutorial.md  gpu_telemetry.md  huggingface_tgi.md  lora.md  multi_modal.md  multi_turn.md  process_export_files.md  rankings.md  replaying_datasets.md  tutorial.md
genai-perf/docs/assets/: custom_gpu_metrics.csv
genai-perf/genai_perf/: __init__.py  constants.py  demo_for_visualize.py  genai_perf_config.yaml  logging.py  main.py  parser.py  tokenizer.py  types.py  utils.py  wrapper.py
genai-perf/genai_perf/TCO_calculator/: TCO_calculator.ipynb
genai-perf/genai_perf/checkpoint/: checkpoint.py
genai-perf/genai_perf/config/: endpoint_config.py  model_spec.py
genai-perf/genai_perf/export_data/: console_exporter.py  csv_exporter.py  data_exporter_factory.py  exporter_config.py  exporter_utils.py  json_exporter.py  output_reporter.py  prometheus_exporter.py  telemetry_data_exporter_util.py
genai-perf/genai_perf/goodput_calculator/: __init__.py  goodput_calculator.py  llm_goodput_calculator.py
genai-perf/genai_perf/goodput_reporter/: __init__.py  goodput_reporter.py  llm_goodput_reporter.py
genai-perf/genai_perf/inputs/: config.py  file_input_retriever.py  input_constants.py  input_retriever_factory.py  inputs.py  inputs_config.py  output_format_converter.py  output_format_converter_factory.py  synthetic_data_retriever.py  synthetic_prompt_generator.py
genai-perf/genai_perf/llm_inputs/: llm_inputs.py
genai-perf/genai_perf/measurements/: model_config_measurement.py  model_constraints.py  run_config_measurement.py  run_constraints.py
genai-perf/genai_perf/metrics/: __init__.py  image_retrieval_metrics.py  llm_metrics.py  metrics.py  statistics.py  statistics_util.py  telemetry_metrics.py  telemetry_metrics_statistics.py  telemetry_statistics.py  telemetry_stats_aggregator.py
genai-perf/genai_perf/plots/: base_plot.py  exceptions.py  plot_config.py  plot_config_parser.py
genai-perf/genai_perf/profile_data_parser/: __init__.py  image_retrieval_profile_data_parser.py  parser_result.py  (+3 more)
genai-perf/notebooks/: README.md
genai-perf/rankings_jsonl/: passages.jsonl  queries.jsonl
genai-perf/tests/: test_artifacts.py  test_base_config.py  test_checkpoint.py  test_cli.py  test_common.py  test_config_command.py  test_config_field.py  test_config_fields.py  test_config_parser.py  test_console_exporter.py  test_create_telemetry_data_collector.py  test_csv_exporter.py  test_data_exporter_factory.py  test_embeddings_converter.py  test_file_input_retriever.py  test_genai_perf_config.py  test_image_retrieval_converter.py  test_image_retrieval_profile_data_parser.py  test_input_embeddings.py  test_input_image_retrieval.py  test_input_rankings.py  test_input_retriever_factory.py  test_inputs.py  test_inputs_embeddings.py  test_inputs_rankings.py  test_json_exporter.py  test_llm_goodput_calculator.py  test_llm_inputs.py  test_llm_inputs_embeddings.py  test_llm_inputs_image_retrieval.py  test_llm_inputs_rankings.py  test_llm_metrics.py  test_llm_profile_data_parser.py  test_metrics.py  test_model_config_measurement.py  test_nvclip_converter.py  test_openai_chat_converter.py  test_openai_completions_converter.py  test_optuna_objective_generator.py  test_output_format_converter.py  (+27 more)
src/: CMakeLists.txt  base_queue_ctx_id_tracker.h  command_line_parser.cc  command_line_parser.h  concurrency_manager.cc  concurrency_manager.h  constants.h  coroutine.h  coroutines.h  cuda_runtime_library_manager.cc  cuda_runtime_library_manager.h  custom_load_manager.cc  custom_load_manager.h  custom_request_schedule_manager.cc  custom_request_schedule_manager.h  data_loader.cc  data_loader.h  dlwrapper.cc  dlwrapper.h  fixed_time_manager.cc  fixed_time_manager.h  fixed_time_worker.cc  fixed_time_worker.h  infer_context.cc  infer_context.h  infer_data_manager_base.cc  infer_data_manager_shm.cc  infer_data_manager_shm.h  inference_load_mode.h  inference_profiler.cc  inference_profiler.h  load_manager.cc  load_manager.h  main.cc  mock_data_loader.h  mock_model_parser.h  mock_profile_data_exporter.h  mock_request_rate_worker.h  model_parser.cc  model_parser.h  (+35 more)
src/client_backend/: CMakeLists.txt  client_backend.cc  client_backend.h  mock_client_backend.h
src/client_backend/dynamic_grpc/: CMakeLists.txt  dynamic_grpc_client.cc  dynamic_grpc_client.h  dynamic_grpc_client_backend.cc  dynamic_grpc_client_backend.h  dynamic_grpc_infer_input.cc  dynamic_grpc_infer_input.h
src/client_backend/streaming_nim/: CMakeLists.txt
src/maxine/: CMakeLists.txt
src/perf_analyzer/: __init__.py  cli.py
src/session_concurrency/: payload_dataset_manager.cc  payload_dataset_manager.h  payload_json_utils.cc  payload_json_utils.h  request_handler.cc  request_handler.h  response_json_utils.cc  response_json_utils.h  session_concurrency_manager.cc  session_concurrency_manager.h
templates/: generate_docs.py  template_vars.yaml
templates/genai-perf-templates/: README_template  compare_template  customizable_frontends_template  embeddings_template  example_plots_template  files_template  lora_template  multi_modal_template  rankings_template  tutorial_template  version_template
templates/perf-analyzer-templates/: quick_start_template
tools/: add_copyright.py  sharegpt_dataset_converter.py
(+680 files in other folders)
